# storage-sync

./: README.md  pyproject.toml  requirements.txt
storage_sync/: __init__.py  cli.py  sync.py  utils.py
storage_sync/clients/: __init__.py  base.py  blob.py  dfs.py  local.py
tests/: __init__.py  test_utils.py
